# metody-lab-makao

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: card.cpp  card.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  player.cpp  player.hpp
